--- a/app/presentation/src/main/res/drawable/download_tracks_back.xml
+++ b/app/presentation/src/main/res/drawable/download_tracks_back.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="30">
   <path
       android:pathData="M15,15m-15,0a15,15 0,1 1,30 0a15,15 0,1 1,-30 0"
-      android:fillColor="#69A655"/>
+      android:fillColor="#FFFFEA00"/>
   <path
       android:fillColor="#4B4B4B"
       android:strokeWidth="1"
